# CVideoConverter

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  IOException.h  Main.cpp  NotUsedException.cpp  NotUsedException.h  Processor.cpp  Processor.h  README.md  VInfos.h  database.c  database.h  main.c  main.h
include/windows/ffmpeg/libavformat/: avformat.h
include/windows/ffmpeg/libavutil/: ffversion.h
include/windows/libavcodec/: ac3_parser.h  adts_parser.h  avcodec.h  avdct.h  avfft.h  d3d11va.h  dirac.h  dv_profile.h  dxva2.h  jni.h  mediacodec.h  qsv.h  vaapi.h  vdpau.h  version.h  videotoolbox.h  vorbis_parser.h  xvmc.h
include/windows/libavdevice/: avdevice.h
include/windows/libavfilter/: avfilter.h  buffersink.h  buffersrc.h
include/windows/libavformat/: avformat.h  avio.h  version.h
include/windows/libavutil/: adler32.h  aes.h  aes_ctr.h  attributes.h  audio_fifo.h  avstring.h  avutil.h  base64.h  blowfish.h  bprint.h  bswap.h  buffer.h  camellia.h  cast5.h  channel_layout.h  common.h  cpu.h  crc.h  des.h  dict.h  downmix_info.h  encryption_info.h  error.h  eval.h  ffversion.h  fifo.h  file.h  frame.h  hash.h  hdr_dynamic_metadata.h  hmac.h  hwcontext.h  hwcontext_cuda.h  hwcontext_d3d11va.h  hwcontext_drm.h  hwcontext_dxva2.h  hwcontext_mediacodec.h  hwcontext_qsv.h  hwcontext_vaapi.h  hwcontext_vdpau.h  (+33 more)
include/windows/libpostproc/: postprocess.h
include/windows/libswresample/: swresample.h
include/windows/libswscale/: swscale.h
lib/windows/: avcodec.lib  avdevice.lib  avfilter.lib  postproc.lib
lib/windows/ffmpeg/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
lib/windows/libav/: avcodec-58.def  avformat-58.def  avutil-56.def
lib/windows/libav/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libswscale.pc
src/: Database.cpp  Main.cpp  Processor.cpp
src/headers/: Database.h  NotUsedException.h  Processor.h
